.metadata/.plugins/org.eclipse.cdt.ui/Lab5_Traficlight_.build.log
01:12:03 **** Incremental Build of configuration Debug for project Lab5_Traficlight_ ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/system_stm32f1xx.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/system_stm32f1xx.d" -MT"Src/system_stm32f1xx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/system_stm32f1xx.o"
In file included from ../Src/main.c:17:
../Inc/stm32f1xx.h:141:2: error: #error "Please select first the target STM32F1xx device used in your application (in stm32f1xx.h file)"
  141 | #error "Please select first the target STM32F1xx device used in your application (in stm32f1xx.h file)"
      |  ^~~~~
../Src/main.c:19:10: error: unknown type name 'uint32_t'
   19 | volatile uint32_t msTicks = 0;
      |          ^~~~~~~~
../Src/main.c: In function 'delay':
../Src/main.c:37:9: error: unknown type name 'uint32_t'
   37 |         uint32_t expected_ticks = msTicks + ms;
      |         ^~~~~~~~
../Src/main.c:18:1: note: 'uint32_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
   17 | #include <stm32f1xx.h>
  +++ |+#include <stdint.h>
   18 | 
../Src/main.c: In function 'led_init':
../Src/main.c:51:9: error: 'RCC' undeclared (first use in this function)
   51 |         RCC->APB2ENR |= RCC_APB2ENR_IOPCEN;
      |         ^~~
../Src/main.c:51:9: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:51:25: error: 'RCC_APB2ENR_IOPCEN' undeclared (first use in this function)
   51 |         RCC->APB2ENR |= RCC_APB2ENR_IOPCEN;
      |                         ^~~~~~~~~~~~~~~~~~
../Src/main.c:52:9: error: 'GPIOC' undeclared (first use in this function)
   52 |         GPIOC->CRH = 0x02 << ((13 - 8) << 2);
      |         ^~~~~
../Src/main.c: In function 'led_on':
../Src/main.c:61:9: error: 'GPIOC' undeclared (first use in this function)
   61 |         GPIOC->BSRR = 1 << 13;
      |         ^~~~~
../Src/main.c: In function 'led_off':
../Src/main.c:70:9: error: 'GPIOC' undeclared (first use in this function)
   70 |         GPIOC->BRR = 1 << 13;
      |         ^~~~~
../Src/main.c: In function 'main':
../Src/main.c:76:19: warning: implicit declaration of function 'SysTick_Config' [-Wimplicit-function-declaration]
   76 |         int ret = SysTick_Config(SystemCoreClock / 1000);
      |                   ^~~~~~~~~~~~~~
../Src/main.c:76:34: error: 'SystemCoreClock' undeclared (first use in this function)
   76 |         int ret = SysTick_Config(SystemCoreClock / 1000);
      |                                  ^~~~~~~~~~~~~~~
In file included from ../Src/system_stm32f1xx.c:59:
../Inc/stm32f1xx.h:141:2: error: #error "Please select first the target STM32F1xx device used in your application (in stm32f1xx.h file)"
  141 | #error "Please select first the target STM32F1xx device used in your application (in stm32f1xx.h file)"
      |  ^~~~~
../Src/system_stm32f1xx.c:142:1: error: unknown type name 'uint32_t'
  142 | uint32_t SystemCoreClock = 16000000;
      | ^~~~~~~~
../Src/system_stm32f1xx.c:60:1: note: 'uint32_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
   59 | #include "stm32f1xx.h"
  +++ |+#include <stdint.h>
   60 | 
../Src/system_stm32f1xx.c:143:7: error: unknown type name 'uint8_t'
  143 | const uint8_t AHBPrescTable[16U] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
      |       ^~~~~~~
../Src/system_stm32f1xx.c:144:7: error: unknown type name 'uint8_t'
  144 | const uint8_t APBPrescTable[8U] =  {0, 0, 0, 0, 1, 2, 3, 4};
      |       ^~~~~~~
../Src/system_stm32f1xx.c: In function 'SystemCoreClockUpdate':
../Src/system_stm32f1xx.c:227:3: error: unknown type name 'uint32_t'
  227 |   uint32_t tmp = 0U, pllmull = 0U, pllsource = 0U;
      |   ^~~~~~~~
../Src/system_stm32f1xx.c:227:3: note: 'uint32_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
../Src/system_stm32f1xx.c:238:9: error: 'RCC' undeclared (first use in this function)
  238 |   tmp = RCC->CFGR & RCC_CFGR_SWS;
      |         ^~~
../Src/system_stm32f1xx.c:238:9: note: each undeclared identifier is reported only once for each function it appears in
../Src/system_stm32f1xx.c:238:21: error: 'RCC_CFGR_SWS' undeclared (first use in this function)
  238 |   tmp = RCC->CFGR & RCC_CFGR_SWS;
      |                     ^~~~~~~~~~~~
../Src/system_stm32f1xx.c:251:29: error: 'RCC_CFGR_PLLMULL' undeclared (first use in this function)
  251 |       pllmull = RCC->CFGR & RCC_CFGR_PLLMULL;
      |                             ^~~~~~~~~~~~~~~~
../Src/system_stm32f1xx.c:252:31: error: 'RCC_CFGR_PLLSRC' undeclared (first use in this function)
  252 |       pllsource = RCC->CFGR & RCC_CFGR_PLLSRC;
      |                               ^~~~~~~~~~~~~~~
../Src/system_stm32f1xx.c:270:26: error: 'RCC_CFGR_PLLXTPRE' undeclared (first use in this function)
  270 |         if ((RCC->CFGR & RCC_CFGR_PLLXTPRE) != (uint32_t)RESET)
      |                          ^~~~~~~~~~~~~~~~~
../Src/system_stm32f1xx.c:270:49: error: 'uint32_t' undeclared (first use in this function)
  270 |         if ((RCC->CFGR & RCC_CFGR_PLLXTPRE) != (uint32_t)RESET)
      |                                                 ^~~~~~~~
../Src/system_stm32f1xx.c:270:49: note: 'uint32_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
make: *** [Src/subdir.mk:28: Src/main.o] Error 1
../Src/system_stm32f1xx.c:270:58: error: expected ')' before 'RESET'
  270 |         if ((RCC->CFGR & RCC_CFGR_PLLXTPRE) != (uint32_t)RESET)
      |            ~                                             ^~~~~
      |                                                          )
make: *** Waiting for unfinished jobs....
../Src/system_stm32f1xx.c:328:37: error: 'RCC_CFGR_HPRE' undeclared (first use in this function)
  328 |   tmp = AHBPrescTable[((RCC->CFGR & RCC_CFGR_HPRE) >> 4U)];
      |                                     ^~~~~~~~~~~~~
make: *** [Src/subdir.mk:28: Src/system_stm32f1xx.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

01:12:04 Build Failed. 25 errors, 1 warnings. (took 490ms)

